finished racial discrimination mini project

--- a/EDA_racial_discrimination/sliderule_dsi_inferential_statistics_exercise_2.ipynb
+++ b/EDA_racial_discrimination/sliderule_dsi_inferential_statistics_exercise_2.ipynb
@@ -43,23 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from scipy import stats"
+    "from scipy import stats\n",
+    "np.random.seed(42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.io.stata.read_stata('data/us_job_market_discrimination.dta')"
@@ -67,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +73,7 @@
        "235.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +283,7 @@
        "[5 rows x 65 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,15 +300,23 @@
    "source": [
     "<div class=\"span5 alert alert-success\">\n",
     "<p>Your answers to Q1 and Q2 here</p>\n",
-    "</div>"
+    "</div>\n",
+    "\n",
+    "#### 1. What test is appropriate? Does the CLT apply?\n",
+    "\n",
+    "A 2 sample $t$-test would be appropriate here, as we are comparing the mean callback responses for 2 independent samples. The Central Limit Theorum would apply due to the binary nature of the target variable, and can be represented as a Bernoulli distribution.\n",
+    "\n",
+    "#### 2. Null and alternate hypothesis\n",
+    "\n",
+    "$H_0$: Race does not affect the callback rate from employers\n",
+    "\n",
+    "$H_A$: Race does affect the callback rate from employers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "w = data[data.race=='w']\n",
@@ -320,13 +325,164 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09650924056768417"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w.call.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0644763857126236"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.call.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Compute margin of error, confidence interval, and p-value. Try using both the bootstrapping and the frequentist statistical approaches."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution to Q3 here"
+    "# Your solution to Q3 here\n",
+    "\n",
+    "def bootstrap_replicate_1d(data, func):\n",
+    "    return func(np.random.choice(data, size=len(data)))\n",
+    "\n",
+    "def draw_bs_reps(data, func, size=1):\n",
+    "    \"\"\"Draw bootstrap replicates.\"\"\"\n",
+    "\n",
+    "    # Initialize array of replicates: bs_replicates\n",
+    "    bs_replicates = np.empty(size)\n",
+    "\n",
+    "    # Generate replicates\n",
+    "    for i in range(size):\n",
+    "        bs_replicates[i] = bootstrap_replicate_1d(data, func)\n",
+    "\n",
+    "    return bs_replicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#confidence level: 95%\n",
+    "bootstrap_b = draw_bs_reps(b.call, np.mean, 10000)\n",
+    "bootstrap_w = draw_bs_reps(w.call, np.mean, 10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The confidence interval for black applicants is 0.05462012439966202 - 0.07433264702558517\n",
+      "The confidence interval for white applicants is 0.08501026779413223 - 0.10841888934373856\n",
+      "The margin of error for black applicants is ± 0.009796631141379478 %\n",
+      "The margin of error for white applicants is ± 0.0115847629904747 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "conf_int_b = np.percentile(bootstrap_b, [2.5, 97.5])\n",
+    "conf_int_w = np.percentile(bootstrap_w, [2.5, 97.5])\n",
+    "print('The confidence interval for black applicants is', conf_int_b[0], '-', conf_int_b[1])\n",
+    "print('The confidence interval for white applicants is', conf_int_w[0], '-', conf_int_w[1])\n",
+    "print('The margin of error for black applicants is ±', bootstrap_b.mean() - conf_int_b[0], '%')\n",
+    "print('The margin of error for white applicants is ±', bootstrap_w.mean() - conf_int_w[0], '%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-410.99061396062075, pvalue=0.0)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_ind(bootstrap_b, bootstrap_w)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the 2 sample $t$-test for the bootstrap samples, the difference of the means is statistically significant. This means that we reject $H_0$ and assume that $H_A$ is true: <i>race affects the callback rate from employers.</i>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-4.114705290861751, pvalue=3.940802103128886e-05)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#frequentist approach\n",
+    "stats.ttest_ind(b.call, w.call)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, based on the 2 sample $t$-test from the actual samples, the difference of the means is statistically significant. This means that we reject $H_0$ and assume that $H_A$ is true: <i>race affects the callback rate from employers.</i>"
    ]
   },
   {
@@ -339,13 +495,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 4. Write a story describing the statistical significance in the context or the original problem.\n",
+    "\n",
+    "\n",
+    "\n",
+    "From this statistical test, it was proven that race and the way a name is associated with race statistically significant in affecting the callback rate from the employers included in this dataset. \n",
+    "\n",
+    "#### 5. Does your analysis mean that race/name is the most important factor in callback success? Why or why not? If not, how would you amend your analysis?\n",
+    "\n",
+    "\n",
+    "\n",
+    "This statistical analysis does not mean that race/name is the most important factor in callback success. No additional variables were analyzed, only the race/name and callback success rates were investigated. While it was determined that race/name affects the callback rate, other variables may have more influence on the success rate of callbacks from employers. For a more definitive answer to this question, all variables would need to be analyzed to determine their influence on the callback rate."
+   ]
   }
  ],
  "metadata": {
