--- a/Capstone 2/Model.ipynb
+++ b/Capstone 2/Model.ipynb
@@ -34,6 +34,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "predictors = pd.read_csv('processed data/predictors.csv')\n",
+    "target = pd.read_csv('processed data/target.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Save the number of columns in predictors: n_cols\n",
     "n_cols = predictors.shape[1]\n",
     "\n",
