--- a/Capstone 2/Preprocessing.ipynb
+++ b/Capstone 2/Preprocessing.ipynb
@@ -185,8 +185,8 @@
    "source": [
     "predictors = pd.DataFrame(index = amzn.index)  # blank dataframe to merge data into\n",
     "\n",
-    "df_to_merge = [amzn, aapl, googl, msft, ma7, ma21, bbands, macd,  # list of data frames to merge\n",
-    "                              nasdaq, nyse, sp500, tb13, fft_df] \n",
+    "df_to_merge = [msft, ma7, ma21, bbands, macd, fft_df, amzn, aapl, googl,  \n",
+    "               nasdaq, nyse, sp500, tb13]  # list of data frames to merge\n",
     "\n",
     "#merge data into 1 dataframe\n",
     "predictors = pd.concat(df_to_merge, join = 'outer', axis = 1, sort = True) \n",
@@ -204,29 +204,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Push predictors & target sets to flat files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictors.to_csv('processed data/predictors.csv')\n",
-    "target.to_csv('processed data/target.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Split into Testing & Training Sets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,8 +221,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Push to flat files"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
