--- a/Capstone 2/Preprocessing.ipynb
+++ b/Capstone 2/Preprocessing.ipynb
@@ -194,10 +194,12 @@
     "#predictors.dropna(inplace = True)  # drop NaN values\n",
     "\n",
     "#drop target and other unnecessary data from predictors dataframe\n",
-    "predictors.drop(['msft adj close', 'Real Middle Band', 'MACD_Hist', 'MACD_Signal'], \n",
-    "                axis = 1, inplace = True) \n",
+    "predictors.dropna(inplace = True)\n",
     "\n",
-    "target = msft['msft adj close'].copy()  # create target dataframe"
+    "target = predictors['msft adj close'].copy()  # create target dataframe\n",
+    "\n",
+    "predictors.drop(['msft adj close', 'Real Middle Band', 'MACD_Hist', 'MACD_Signal'], \n",
+    "                axis = 1, inplace = True) "
    ]
   },
   {
@@ -256,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   },
   "toc": {
    "base_numbering": 1,
