--- a/Capstone 2/Preprocessing.ipynb
+++ b/Capstone 2/Preprocessing.ipynb
@@ -64,15 +64,22 @@
     "    df = pd.read_csv('raw data/'+filename+'.csv', parse_dates =  {'date' : [0]}, \n",
     "                     date_parser = parser)\n",
     "    \n",
-    "    df.drop(['2. high', '3. low', '7. dividend amount', '8. split coefficient'],\n",
-    "           axis = 1, inplace = True)\n",
-    "    df['1. open'] = df['4. close'] - df['1. open'] #create differential values in open column location\n",
-    "    df.rename(index = str, columns = {'1. open': name + ' differential',\n",
-    "                                      '5. adjusted close': name + ' adj close',\n",
-    "                                      '6. volume': name + ' vol'}, inplace = True) \n",
-    "    df.drop('4. close', axis = 1, inplace = True) #drop close column\n",
+    "    df.drop(['1. open', '2. high', '3. low', '4. close', '7. dividend amount', \n",
+    "             '8. split coefficient'], axis = 1, inplace = True)\n",
+    "    \n",
+    "    df.rename(index = str, columns = {'5. adjusted close': name + ' adj close',\n",
+    "                                      '6. volume': name + ' vol'}, inplace = True)\n",
+    "    \n",
+    "    #we only want volume data for the predictor stocks\n",
+    "    #we will stationarize (diff) the msft data after creating the fourier transforms\n",
+    "    if name != 'msft':\n",
+    "        df.drop(name + ' vol', axis=1, inplace=True)\n",
+    "        diff = df[name + ' adj close'].diff()  \n",
+    "        df[name + ' adj close'] = diff  \n",
+    "        df.dropna(inplace=True)\n",
     "    \n",
     "    df.set_index('date', inplace = True)\n",
+    "    \n",
     "    return df"
    ]
   },
@@ -94,12 +101,15 @@
     "    df = pd.read_csv('raw data/'+filename+'.csv', parse_dates =  {'date' : [0]}, \n",
     "                     date_parser = parser)\n",
     "\n",
-    "    df.drop(['High', 'Low'], axis = 1, inplace = True)\n",
-    "    df['Open'] = df['Close'] - df['Open'] #create differential values in open column location\n",
-    "    df.rename(index = str, columns = {'Open': name + ' differential',\n",
-    "                                      'Adj Close': name + ' adj close',\n",
-    "                                      'Volume': name + ' vol'}, inplace = True) \n",
-    "    df.drop('Close', axis = 1, inplace = True) #drop close column\n",
+    "    df.drop(['High', 'Low', 'Open', 'Close', 'Volume'], axis = 1, inplace = True)\n",
+    "    \n",
+    "    df.rename(index = str, columns = {'Adj Close': name + ' adj close'}, inplace = True)\n",
+    "    \n",
+    "    diff = pd.DataFrame(df[name + ' adj close']).diff()\n",
+    "    \n",
+    "    df[name + ' adj close'] = diff\n",
+    "    \n",
+    "    df.dropna(inplace=True)\n",
     "    \n",
     "    df.set_index('date', inplace = True)\n",
     "    return df"
@@ -109,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load data from flat files"
+    "## Extract data from flat files"
    ]
   },
   {
@@ -167,7 +177,25 @@
     "    fft_list_m10= np.copy(fft_list); fft_list_m10[num_:-num_]=0\n",
     "    fft_df['fft {}'.format(num_)] = np.fft.ifft(fft_list_m10)\n",
     "fft_df.drop(['fft'], axis = 1, inplace = True)\n",
-    "fft_df = fft_df.set_index(amzn.index)"
+    "fft_df = fft_df.set_index(msft.index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Difference Microsoft Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff = msft['msft adj close'].diff()\n",
+    "msft['msft adj close'] = diff\n",
+    "msft.dropna(inplace=True)"
    ]
   },
   {
@@ -179,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +226,7 @@
     "\n",
     "target = predictors['msft adj close'].copy()  # create target dataframe\n",
     "\n",
-    "predictors.drop(['msft adj close', 'Real Middle Band', 'MACD_Hist', 'MACD_Signal'], \n",
+    "predictors.drop(['msft adj close', 'Real Middle Band', 'MACD', 'MACD_Signal'], \n",
     "                axis = 1, inplace = True) "
    ]
   },
@@ -211,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
